// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render correctly 1`] = `
Array [
  .c0 {
  fill: none;
  stroke: rgb(0,0,0);
  stroke-width: 3;
}

<path
    className="line-path c0"
    d="M0"
  />,
  .c0 {
  fill: rgb(255,255,255);
  stroke: rgb(0,0,0);
  stroke-width: 3;
}

<g
    className="line-dot-group"
  >
    <circle
      className="bar-line c0"
      cx={NaN}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      r={5}
    />
  </g>,
]
`;

exports[`render correctly width dates 1`] = `
Array [
  .c0 {
  fill: none;
  stroke: rgb(0,0,0);
  stroke-width: 3;
}

<path
    className="line-path c0"
    d="M0"
  />,
  .c0 {
  fill: rgb(255,255,255);
  stroke: rgb(0,0,0);
  stroke-width: 3;
}

<g
    className="line-dot-group"
  >
    <circle
      className="bar-line c0"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      r={5}
    />
  </g>,
]
`;
